# EntregaGazebo

./: README.md  launch.sh
Controlador/: CMakeLists.txt  controlador_plugin.cpp  set_gazebo_path.py
mundos/: map.world.xml
pioneer/: model.sdf
